LPD-59097 SF, inline methods and strings